# quill-v1

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  crates.js  index.html  out.txt  package-lock.json  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
compiler_book/: book.toml
quill/: all.html  enum.CompilerLocation.html  enum.HostType.html  fn.build.html  fn.error.html  fn.exit.html  fn.gen_cli_config.html  fn.gen_project_config.html  fn.generate_build_config.html  fn.generate_build_info.html  fn.main.html  fn.parse_build_target.html  fn.process_build.html  fn.process_clean.html  fn.process_run.html  fn.run.html  index.html  sidebar-items.js  struct.BuildConfig.html  struct.CliConfig.html  struct.HumanSmallDuration.html  struct.ProjectConfig.html  (+1 more)
quill_error/: all.html  (+3 more)
src/download_compiler_deps/: Cargo.toml
src/download_compiler_deps/src/: main.rs
src/quill/: Cargo.toml  build.rs  cli.rs.html  main.rs.html  update.rs.html
src/quill/src/: cli.rs  cli.yml  main.rs  update.rs
src/quill_analyse/: Cargo.toml  lib.rs.html  values.rs.html
src/quill_analyse/src/: lib.rs  values.rs
src/quill_borrow_check/: Cargo.toml  lib.rs.html  ownership.rs.html
src/quill_borrow_check/src/: checker.rs  lib.rs  mir.rs  ownership.rs
src/quill_borrow_check/tests/: integration_test.rs
src/quill_func_objects/: Cargo.toml  lib.rs.html
src/quill_func_objects/src/: lib.rs
src/quill_func_objects/tests/: integration_test.rs
src/quill_index/: Cargo.toml  lib.rs.html  main_index.rs.html  type_index.rs.html  type_resolve.rs.html
src/quill_index/src/: lib.rs  main_index.rs  type_index.rs  type_resolve.rs
src/quill_index/test/: file.quill
src/quill_index/tests/: file.quill  integration_test.rs
src/quill_install/: Cargo.toml  main.rs.html
src/quill_install/src/: main.rs
src/quill_lexer/: Cargo.toml  lib.rs.html
src/quill_lexer/src/: lib.rs
src/quill_lexer/test/: file.quill
src/quill_lexer/tests/: integration_test.rs
src/quill_llvm/: Cargo.toml  codegen.rs.html  debug.rs.html  lib.rs.html  monomorphisation.rs.html
src/quill_llvm/func/: body.rs.html  lifetime.rs.html  mod.rs.html  rvalue.rs.html
src/quill_llvm/intrinsics/: mod.rs.html
src/quill_llvm/repr/: any_type.rs.html  data.rs.html  llvm_struct.rs.html  mod.rs.html
src/quill_llvm/src/: codegen.rs  debug.rs  func.rs  lib.rs  monomorphisation.rs  repr.rs  sort_types.rs
src/quill_llvm/src/func/: body.rs  lifetime.rs  mod.rs  monomorphise.rs  rvalue.rs
src/quill_llvm/src/intrinsics/: mod.rs
src/quill_llvm/src/repr/: any_type.rs  data.rs  llvm_struct.rs  mod.rs
src/quill_llvm/tests/: integration_test.rs
src/quill_lsp/: Cargo.toml  backend.rs.html  diagnostic.rs.html  main.rs.html  path.rs.html  semantic_tokens.rs.html
src/quill_lsp/src/: backend.rs  diagnostic.rs  main.rs  path.rs  semantic_tokens.rs
src/quill_mir/: Cargo.toml  definition.rs.html  expr.rs.html  impls.rs.html  lib.rs.html  mir.rs.html  pattern_match.rs.html  validate.rs.html
src/quill_mir/src/: analyse.rs  definition.rs  expr.rs  impls.rs  lib.rs  mir.rs  pattern_match.rs  validate.rs
src/quill_mir/tests/: higher_kinded_types.quill  integration_test.rs  normal_types.quill  primitive_types.quill
src/quill_monomorphise/: Cargo.toml  lib.rs.html  mono_mir.rs.html  monomorphisation.rs.html  monomorphise.rs.html
src/quill_monomorphise/src/: lib.rs  mono_mir.rs  monomorphisation.rs  monomorphise.rs
src/quill_parser/: Cargo.toml  data_types.rs.html  definition.rs.html  expr_pat.rs.html  file.rs.html  identifier.rs.html  lib.rs.html  types.rs.html  validate.rs.html  visibility.rs.html
src/quill_parser/src/: data_types.rs  definition.rs  expr_pat.rs  file.rs  identifier.rs  lib.rs  types.rs  validate.rs  visibility.rs
src/quill_parser/test/: file.quill
src/quill_parser/tests/: file.quill  integration_test.rs
src/quill_reprs/: Cargo.toml  data.rs.html  lib.rs.html  sort_types.rs.html
src/quill_reprs/src/: data.rs  lib.rs  sort_types.rs
src/quill_source_file/: Cargo.toml  lib.rs.html
src/quill_source_file/src/: lib.rs
src/quill_type_deduce/: Cargo.toml  index_resolve.rs.html  lib.rs.html  type_check.rs.html  type_resolve.rs.html
src/quill_type_deduce/hindley_milner/: assumptions.rs.html  constraints.rs.html  explicit.rs.html  generate_constraints.rs.html  mod.rs.html  solver.rs.html  substitute.rs.html
src/quill_type_deduce/hir/: definition.rs.html  expr.rs.html  mod.rs.html  pattern.rs.html
src/quill_type_deduce/src/: index_resolve.rs  lib.rs  type_check.rs  type_deduce.rs  type_resolve.rs
src/quill_type_deduce/src/hindley_milner/: assumptions.rs  constraints.rs  explicit.rs  generate_constraints.rs  mod.rs  solver.rs  substitute.rs
src/quill_type_deduce/src/hir/: definition.rs  expr.rs  mod.rs  pattern.rs
src/quill_type_deduce/tests/: file.quill  higher_kinded_types.quill  integration_test.rs  normal_types.quill  primitive_types.quill
src/quillc/: Cargo.toml  build.rs  lib.rs.html
src/quillc/src/: lib.rs  main.rs
src/quillc/tests/: tests.rs
src/quillc/tests/check_main_function/empty_project/: README.md
src/quillc/tests/check_main_function/empty_project_with_main/: main.ql
src/quillc/tests/check_main_function/successful/: README.md  main.ql
src/quillc/tests/io_putchar/ascii/: main.ql
src/quillc/tests/match_expr/: main.ql
src/quillc/tests/match_expr/aspect/: main.ql
src/quillc/tests/match_expr/borrow/: main.ql
src/quillc/tests/match_expr/data/: main.ql
src/quillc/tests/match_expr/enum/: main.ql
src/quillc/tests/match_expr/simple/: main.ql
src/quillc/tests/regression/0054/: main.ql
src/quillc/tests/regression/0055/: main.ql
src/quillc/tests/regression/0057/: main.ql
src/quillc/tests/regression/0076/empty_block/: main.ql
src/quillc/tests/regression/0076/let_as_last_expr/: main.ql
src/quillc/tests/regression/0076/nested_let/: main.ql
src/quillc/tests/regression/0076/underscore_in_expr/: main.ql
src/quillc/tests/regression/0125/simple/: main.ql
src/quillc/tests/regression/0125/with_data/: main.ql  output.txt
(+419 files in other folders)
