[package]
name = "download_compiler_deps"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Run this program to download dependencies before running the compiler"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt"]}
reqwest = "0.11.3"
tar = "0.4.33"
flate2 = "1.0"
