[package]
name = "quill"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
quill_common = { path = "../quill_common" }
quill_source_file = { path = "../quill_source_file" }
quill_target = { path = "../quill_target" }
quillc_api = { path = "../quillc_api" }

clap = { version = "~2.33.3", features = ["yaml"] }
console = "^0.14"
indicatif = "^0.16"
tracing = "^0.1.26"
tracing-subscriber = "^0.2.18"
serde_json = "1.0"
serde = "1.0"
toml = "0.5"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "process"] }

self_update = "0.27.0"
reqwest = "0.11.4"
tar = "0.4.35"
flate2 = "1.0"
chrono = "0.4.19"
tempdir = "0.3.7"
dirs = "3.0.2"
xz2 = "0.1"
zip = "0.5"
