[package]
name = "quill"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2021"
description = "Compiler for the Quill language"

[dependencies]
quill_common = { path = "../quill_common" }
quill_error = { path = "../quill_error" }
quill_source_file = { path = "../quill_source_file" }
quill_target = { path = "../quill_target" }
quillc_api = { path = "../quillc_api" }

clap = { version = "2.34.0", features = ["color", "wrap_help"] }
console = "0.15.0"
indicatif = "0.16.2"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
serde_json = "1.0.72"
serde = "1.0.131"
toml = "0.5.8"
lazy_static = "1.4.0"

curl = "0.4.41"
tar = "0.4.37"
flate2 = "1.0.22"
chrono = "0.4.19"
tempdir = "0.3.7"
dirs = "4.0.0"
xz2 = "0.1.6"
zip = "0.5.13"
