[package]
name = "quill_analyse"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Static analysis on MIR"

[dependencies]
quill_common = { path = "../quill_common" }
quill_mir = { path = "../quill_mir" }
quill_monomorphise = { path = "../quill_monomorphise" }
