[package]
name = "quill_borrow_check"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
quill_common = { path = "../quill_common" }
quill_parser = { path = "../quill_parser" }
quill_mir = { path = "../quill_mir" }
quill_type_deduce = { path = "../quill_type_deduce" }
