[package]
name = "quill_func_objects"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Converts curried functions to function objects and explicit function invocations"

[dependencies]
quill_common = { path = "../quill_common" }
quill_parser = { path = "../quill_parser" }
quill_mir = { path = "../quill_mir" }
quill_type_deduce = { path = "../quill_type_deduce" }

[dev-dependencies]
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_type = { path = "../quill_type" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
quill_borrow_check = { path = "../quill_borrow_check" }
quill_error = { path = "../quill_error" }
