[package]
name = "quill_index"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
quill_common = { path = "../quill_common" }
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_parser = { path = "../quill_parser" }
quill_type = { path = "../quill_type" }
multimap = "0.8.3"
either = "^1.6"

[dev-dependencies]
quill_error = { path = "../quill_error" }
