[package]
name = "quill_install"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
console = "^0.14"
indicatif = "^0.16"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "process", "io-std", "fs"] }
reqwest = "0.11.4"
tar = "0.4.35"
flate2 = "1.0"
tempdir = "0.3.7"
dirs = "3.0.2"
