[package]
name = "quill_lexer"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
quill_common = { path = "../quill_common" }
tokio = { version = "^1.0", features = ["macros", "rt"] }
quill_source_file = { path = "../quill_source_file" }
