[package]
name = "quill_llvm"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
guess_host_triple = "^0.1"
quill_common = { path = "../quill_common" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
quill_type = { path = "../quill_type" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_mir = { path = "../quill_mir" }
quill_target = { path = "../quill_target" }
dunce = "1.0.1"

[dev-dependencies]
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_borrow_check = { path = "../quill_borrow_check" }
quill_func_objects = { path = "../quill_func_objects" }
quill_link = { path = "../quill_link" }
