[package]
name = "quill_lsp"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "A language server protocol implementation for Quill"

[dependencies]
quill_lexer = { path = "../quill_lexer" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_mir = { path = "../quill_mir" }
quill_borrow_check = { path = "../quill_borrow_check" }

tokio = { version = "^1.0", features = ["macros", "rt-multi-thread", "io-std"] }
lspower = "1.0"
tracing = "^0.1.25"
tracing-subscriber = "^0.2.16"
