[package]
name = "quill_lsp"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2021"
description = "A language server protocol implementation for Quill"

[dependencies]
quill_common = { path = "../quill_common" }
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_mir = { path = "../quill_mir" }
quill_borrow_check = { path = "../quill_borrow_check" }

quillc_api = { path = "../quillc_api" }
serde = "1.0"
toml = "0.5"

tokio = { version = "^1.11", features = ["macros", "rt-multi-thread", "io-std", "fs"] }
lspower = "1.1"
tracing = "^0.1.26"
tracing-subscriber = "^0.2.20"
lazy_static = "1.4.0"
