[package]
name = "quill_mir"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Translates HIR into a control flow graph"

[dependencies]
quill_common = { path = "../quill_common" }
quill_type = { path = "../quill_type" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
multimap = "0.8.3"

[dev-dependencies]
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_error = { path = "../quill_error" }
