[package]
name = "quill_parser"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
quill_common = { path = "../quill_common" }
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
tokio = { version = "^1.0", features = ["macros", "rt"] }
