[package]
name = "quill_reprs"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2021"

[dependencies]
quill_index = { path = "../quill_index" }
quill_type = { path = "../quill_type" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_common = { path = "../quill_common" }
quill_mir = { path = "../quill_mir" }
quill_monomorphise = { path = "../quill_monomorphise" }
