[package]
name = "quill_source_file"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Manages contents of file resources while compiling"

[dependencies]
quill_common = { path = "../quill_common" }
tokio = { version = "^1.0", features = ["fs", "sync", "io-util"] }
console = "^0.14"
