[package]
name = "quillc"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"
description = "Compiles projects written in the Quill language"

[dependencies]
quill_common = { path = "../quill_common" }
quill_source_file = { path = "../quill_source_file" }
quill_lexer = { path = "../quill_lexer" }
quill_parser = { path = "../quill_parser" }
quill_index = { path = "../quill_index" }
quill_type = { path = "../quill_type" }
quill_type_deduce = { path = "../quill_type_deduce" }
quill_mir = { path = "../quill_mir" }
quill_borrow_check = { path = "../quill_borrow_check" }
quill_func_objects = { path = "../quill_func_objects" }
quill_llvm = { path = "../quill_llvm" }
quill_link = { path = "../quill_link" }
quill_target = { path = "../quill_target" }

quillc_api = { path = "../quillc_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test-case = "^1.2"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread", "time", "process"] }
